@@ -1,5 +1,6 @@
 Version 2.02.46 - 
 ================================
+  Rename liblvm.a to liblvm-internal.a and build new application library.
   Flush memory pool and fix locking in clvmd refresh and backup command.
   Fix unlocks in clvmd-corosync. Broken in 2.02.45.
 
